fix:   100%{transform: translateY(2000px); display: none; visibility: hidden;}  on scrolldown animation to remove the div as soon as it gets to the bottom of the scroll, fixing the issue with the page being extended beyond the bottom in the Y direction

--- a/main.css
+++ b/main.css
@@ -205,6 +205,7 @@ main {
 
 /*load screen spaceship scroll animation*/
 
+
 .loadscreen {
   width: 100%;
   height: 100px;
@@ -216,7 +217,7 @@ main {
 @media (prefers-reduced-motion: no-preference) {
   @supports (animation-timeline: scroll()) {
     .loadscreen {
-      animation: scrolldown 5s linear infinite;
+      animation: scrolldown 5s linear 1;
       animation-play-state: paused;
     
       animation-iteration-count: 1;
@@ -227,8 +228,8 @@ main {
 
 @keyframes scrolldown {
   0%{transform: translateY(0);}
-  20%{transform: translateY(100px);}
-  100%{transform: translateY(1000px);}
+  20%{transform: translateY(200px);}
+  100%{transform: translateY(2000px); display: none; visibility: hidden;}
 }
 /*
 :root * {
